# bumperbot_nav

./: .gitignore  frames_2024-11-29_14.15.23.gv  frames_2024-12-15_18.34.45.gv
src/Fields2Cover/: CMakeLists.txt
src/bumperbot_bringup/: CMakeLists.txt  package.xml
src/bumperbot_bringup/config/: controller_server_org.yaml  nav2_params.yaml
src/bumperbot_bringup/launch/: localization_launch.py  navigation_launch.py  simulated_robot.launch.py  simulated_robot_org_launch.py
src/bumperbot_controller/: CMakeLists.txt
src/bumperbot_controller/bumperbot_controller/: twist_relay.py  ultrasonic_avoidance.py
src/bumperbot_controller/config/: bumperbot_controllers.yaml  twist_mux_topics.yaml
src/bumperbot_controller/launch/: controller.launch.py
src/bumperbot_description/: CMakeLists.txt  package.xml
src/bumperbot_description/bumperbot_description/: range_to_float32.py
src/bumperbot_description/config/: gz_bridge.yaml
src/bumperbot_description/launch/: gazebo.launch.py
src/bumperbot_description/urdf/: bumperbot.urdf.xacro  bumperbot_camera.xacro  bumperbot_gazebo.xacro
src/bumperbot_localization/config/: amcl.yaml
src/bumperbot_localization/launch/: global_localization.launch.py  local_localization.launch.py
src/bumperbot_navigation/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/bumperbot_navigation/bumperbot_navigation/: check_sim_time.py  compare.py  f2c_path_planner.py  frame_verification.py  my_test.py  nav2_twist_relay.py  path_converter.py  path_executor.py  waypoint_follower.py
src/opennav_coverage_demo/: setup.py
(+10 files in other folders)
